# rust-vim

./: Cargo.toml
core/: Cargo.toml
core/src/: args.rs  buffer.rs  builtin.rs  cursor.rs  keymap.rs  lib.rs  options.rs  opts.rs  util.rs  window.rs
core/src/cli/: commands.rs  mod.rs
rust-vim/: Cargo.toml
rust-vim-common/: Cargo.toml
rust-vim-common/src/: buffer.rs  channel.rs  keymap.rs  lib.rs  plugin.rs  window.rs
rust-vim-common/src/commands/: mod.rs  movement.rs
rust-vim/src/: main.rs
vim/: Cargo.toml
vim/src/: main.rs
vimscript/: Cargo.toml
vimscript/src/: builtin.rs  expr.rs  lib.rs  namespace.rs  value.rs
