[package]
name = "vim-core"
version = "0.1.0"
authors = ["Matthew Pomes <the10thwiz@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
log = "*"
enum-map = "*"
bitfield = "*"
